# SDL-CMake-WorkflowTest

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main.hpp
